# luisa-compute-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  run_tests.sh  rustfmt.toml
.github/workflows/: rust.yml
luisa-compute-sys/: Cargo.toml  build.rs
luisa-compute-sys/src/: binding.rs
luisa_compute/: Cargo.toml  gen.py  llvm_paths.json
luisa_compute/examples/: async.rs  atomic.rs  autodiff.rs  backtrace.rs  bindgroup.rs  bindless.rs  callable.rs  callable_advanced.rs  cbox.rs  custom_aggregate.rs  custom_arg.rs  custom_op.rs  denoiser.rs  device_print.rs  external_callable.rs  find_leak.rs  fluid.rs  mpm.rs  nested_callable.rs  path_tracer.rs  path_tracer_cutout.rs  polymorphism.rs  polymorphism_advanced.rs  printer.rs  ray_query.rs  raytracing.rs  sdf_renderer.rs  shadertoy.rs  test_buffer.rs  vecadd.rs
luisa_compute/src/: lang.rs  lib.rs  printer.rs  resource.rs  rtx.rs  runtime.rs  util.rs
luisa_compute/src/backend/: mod.rs
luisa_compute/src/backend/rust/: codegen.rs  lib.hxx  mod.rs  resource.rs  shader.rs  shader_impl.rs  stream.rs
luisa_compute/src/lang/: autodiff.rs  control_flow.rs  debug.rs  diff.rs  external.rs  flow.rs  functions.rs  gen_swizzle.py  index.rs  kernel.rs  math.rs  math_impl.rs  maybe_expr.rs  mod.rs  ops.rs  poly.rs  print.rs  printer.rs  soa.rs  swizzle.rs  traits.rs  traits_impl.rs  types.rs
luisa_compute/src/lang/ops/: cast_impls.rs  gen_cast.py  impls.rs  spread.rs  traits.rs
luisa_compute/src/lang/types/: alignment.rs  array.rs  core.rs  dynamic.rs  shared.rs  vector.rs
luisa_compute/src/lang/types/vector/: coords.rs  element.rs  gen_swizzle.py  glam.rs  impls.rs  legacy.rs  nalgebra.rs  swizzle.rs
luisa_compute/src/rtx/: curve.rs
luisa_compute/src/runtime/: kernel.rs
luisa_compute/tests/: autodiff.rs  common.rs  misc.rs  test_autodiff.rs
luisa_compute_compiler/: Cargo.toml
luisa_compute_compiler/src/: lib.rs
luisa_compute_derive/: Cargo.toml
luisa_compute_derive/src/: lib.rs
luisa_compute_derive_impl/: Cargo.toml
luisa_compute_derive_impl/src/: lib.rs
luisa_compute_sys/: Cargo.toml  build.rs
luisa_compute_sys/llvm_dummy_orc/: CMakeLists.txt  dummy_orc_eh.cc
luisa_compute_sys/src/: binding.rs  cpp_proxy_backend.rs  lib.rs
luisa_compute_track/: Cargo.toml
luisa_compute_track/src/: lib.rs
src/: lang.rs  lib.rs  resource.rs  runtime.rs
src/lang/: mod.rs
