[package]
name = "luisa-compute"
version = "0.1.0"
edition = "2021"

[dependencies]
luisa-compute-sys = { path = "luisa-compute-sys" }
serde_json = "1.0"
libc = "0.2"
luisa-compute-ir = { path = "luisa-compute-sys/LuisaCompute/src/ir/luisa-compute-ir" }

[workspace]
members = [
    "luisa-compute-sys"
]

[features]
default = []
cuda = []
dx = []
vk = []
llvm = []
ispc = []
python = []
