[package]
edition = "2021"
name = "luisa_compute"
version = "0.1.1-alpha.1"

[dependencies]
bumpalo = "3.12.0"
env_logger = "0.10.0"
half = "2.2.1"

lazy_static = "1.4.0"

libloading = "0.8"
log = "0.4"
parking_lot = "0.12.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
raw-window-handle = "0.6.2"
indexmap = "2.0.0"

luisa_compute_api_types = { path = "../luisa_compute_sys/LuisaCompute/src/rust/luisa_compute_api_types", version = "0.1.1-alpha.1" }
luisa_compute_backend = { path = "../luisa_compute_sys/LuisaCompute/src/rust/luisa_compute_backend", version = "0.1.1-alpha.1" }
luisa_compute_derive = { path = "../luisa_compute_derive", version = "0.1.1-alpha.1" }
luisa_compute_derive_impl = { path = "../luisa_compute_derive_impl", version = "0.1.1-alpha.1" }
luisa_compute_track = { path = "../luisa_compute_track", version = "0.1.1-alpha.1" }
luisa_compute_ir = { path = "../luisa_compute_sys/LuisaCompute/src/rust/luisa_compute_ir", version = "0.1.1-alpha.1" }
luisa_compute_sys = { path = "../luisa_compute_sys", version = "0.1.1-alpha.1" }
rayon = "1.8.0"
glam = { version = "0.27.0", optional = true }
nalgebra = { version = "0.33.0", optional = true }

[dev-dependencies]
libc = "0.2"
winit = "0.29.15"
rand = "0.8.5"
image = "0.24.5"
tobj = "4.0.0"
glam = { version = "0.24.0", optional = false }

[features]
default = ["remote", "cuda", "cpu", "metal", "dx"]
metal = ["luisa_compute_sys/metal"]
cuda = ["luisa_compute_sys/cuda"]
dx = ["luisa_compute_sys/dx"]
strict = ["luisa_compute_sys/strict"]
remote = ["luisa_compute_sys/remote"]
cpu = ["luisa_compute_sys/cpu"]
oidn = ["luisa_compute_sys/oidn"]
wayland = ["luisa_compute_sys/wayland"]
glam = ["dep:glam"]
nalgebra = ["dep:nalgebra"]
