[package]
name = "luisa_compute_sys"
version = "0.1.1-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build-dependencies]
cmake = "0.1.48"


[features]
default = []
cuda = []
strict = []
cpu = []
remote = []
metal = []
dx = []
oidn = []

