[package]
name = "luisa_compute_track"
version = "0.1.1-alpha.1"
edition = "2021"

[lib]
proc-macro = true

[dependencies.syn]
version = "2.0"
features = ["full", "visit-mut"]

[dev-dependencies]
pretty_assertions = "1.4.0"

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.67"
quote = "1.0"
